tests/negative/neg_pr1112a_shared_discriminated.safe
package neg_pr1112a_shared_discriminated

   type packet (ok : boolean = false) is record
      case ok
         when true
            value : integer
         when false
            error : integer

   shared cfg : packet = (ok = true, value = 1)
